--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Pillow==11.1.0
 plotly==6.0.0
 protobuf==5.29.3
 PyPDF2==3.0.1
-#python-dotenv==1.0.1
+python-dotenv
 #pyenv==3.10.12 #added for deployment
 python_bcrypt==0.3.2
 python_docx==1.1.2
