--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,5 @@ streamlit_authenticator==0.1.5
 streamlit_cookies_controller==0.0.4
 streamlit_option_menu==0.4.0
 stripe==11.5.0
+mysql-connector-python==8.0.33
 
